--- a/stylesheet.css
+++ b/stylesheet.css
@@ -192,9 +192,9 @@ body {
   position: fixed;
   top: 0;
   right: 0;
-  width: 30%;
+  width: 100%;
   height: 100%;
-  background-image: url('images/huishen_bw.png'); 
+  background-image: url('images/osu_bw.png'); 
   background-size: cover;
   background-position: center;
   opacity: 0.3; 
